Primeira implementação do carrossel de certificados

--- a/MeuPortifolio.html
+++ b/MeuPortifolio.html
@@ -22,7 +22,8 @@
             <ul>
                 <li><a href="#sobre"><img src="img/smile.png" alt="Sobre mim" title="Sobre mim"></a></li>
                 <li><a href="#portifolio"><img src="img/code.png" alt="Portifolio" title="Portifolio"></a></li>
-                <li><a href="#"><img src="img/envelope.png" alt="Contato" title="Entre em contato"></a></li>
+                <li><a href="#redes-sociais"><img src="img/envelope.png" alt="Contato" title="Entre em contato"></a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -97,16 +98,48 @@
         </div>
     </section>
 
-    <section class="redes-sociais">
-        <h1>Redes Sociais</h1>
+    
+
+    <section class="redes-sociais"><a name="redes-sociais"></a>
+        <h1 class="redes-sociais-titulo">Redes Sociais</h1>
         <div class="redes-sociais-img">
-            <img src="img/linkedin.png" alt="Logo Linkedin" title="Linkedin">
-            <img src="img/github.png" alt="Logo Github" title="Github">
-            <img src="img/gmail.png" alt="Logo Gmail" title="Gmail">
-            <img src="img/whatsapp.png" alt="Logo Whatsapp" title="Whatsapp">
+            <a href="https://linkedin.com/in/sabrina-vitória-pereira-de-souza-ribeiro" target="_blank"><img
+                    src="img/linkedin.png" alt="Logo Linkedin" title="Linkedin"></a>
+            <a href="https://github.com/Sabrinaimport2002" target="_blank"><img src="img/github.png" alt="Logo Github"
+                    title="Github"></a>
+            <a href="mailto:=sabrinaimport2002@gmail.com" target="_blank"><img src="img/gmail.png" alt="Logo Gmail"
+                    title="Gmail"></a>
+            <a href="https://api.whatsapp.com/send?phone=5513998061672&text=Olá" target="_blank"><img
+                    src="img/whatsapp.png" alt="Logo Whatsapp" title="Whatsapp"></a>
         </div>
     </section>
 
+    <section class="destaque">
+        <ul class="slider">
+            <li>
+                <input type="radio" id="slide1" name="slide" checked>
+                <label for="slide1"></label>
+                <img src="img/certificado-XP.png" alt="">
+
+            </li>
+            <li>
+                <input type="radio" id="slide2" name="slide">
+                <label for="slide2"></label>
+                <img src="img/fundamentos-da-agilidade.png" alt="">
+
+            </li>
+            <li>
+                <input type="radio" id="slide3" name="slide">
+                <label for="slide3"></label>
+                <img src="img/certificado-XP.png" alt="">
+
+            </li>
+        </ul>
+    </section>
 </body>
+
+<!-- <footer>
+    <p>&copy; 2022 - Sabrina</p>
+</footer> -->
 
 </html>
